--- a/TODO
+++ b/TODO
@@ -4,9 +4,9 @@ corewar:
 		process:
 			✔ базовая структура для преобразования в байткод @done(20-04-22 21:12)
 			✔ обработчик `.name` и `.comment` @started(20-04-22 14:23) @done(20-04-22 17:08) @lasted(2h45m12s)
-			☐ обработчик кода @today
-		☐ написать label (метки)
-		☐ написать высвобождение памяти
+			✔ обработчик кода @today @done(20-05-01 22:56)
+		✔ label (метки) @done(20-05-01 22:56)
+		✔ написать высвобождение памяти @done(20-05-01 22:56)
 		☐ написать обработчики ошибок
 		✔ дописать `parse_str` @today @1h40m @started(20-04-21 10:56) @done(20-04-21 11:39) @lasted(43m10s)
 		✔ добавление `ENDLN` и `END` в конце строки и кода (соответственно) @started(20-04-21 12:22) @done(20-04-21 13:03) @lasted(41m44s)
